--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        tools:src="@tools:sample/avatars" />
+        android:src="@drawable/profile_icon" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
