--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,8 @@
         android:layout_marginTop="37dp"
         android:layout_marginEnd="131dp"
         android:layout_marginRight="131dp"
+        android:clickable="true"
+        android:onClick="registerUser"
         android:text="New User? Register Here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
