--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="102dp"
@@ -47,7 +47,7 @@
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="103dp"
@@ -71,7 +71,7 @@
             android:text="Submit" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/newUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="124dp"
@@ -79,6 +79,8 @@
             android:layout_marginTop="37dp"
             android:layout_marginEnd="131dp"
             android:layout_marginRight="131dp"
+            android:clickable="true"
+            android:onClick="register"
             android:text="New User? Register Here" />
 
     </LinearLayout>
