--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,7 @@
             android:layout_marginTop="52dp"
             android:layout_marginEnd="160dp"
             android:layout_marginRight="160dp"
+            android:onClick="saveUser"
             android:text="Submit" />
 
         <TextView
